# pre-commit_hook_static_path

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  sample.py  setup.cfg  setup.py  static_path_finder.py  variable_finder.py
pre_commit_hooks/: check_static_path.py  sample.py  test
