[metadata]
name = pre-commit_hook_static_path
version = 0.0.1
author = Przemyslaw Kudriawcew
author_email = polokol13@gmail.com
description = pre-commit_hook_static_path configuration
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/Kudrixon/pre-commit_hook_static_path
classifiers =
    License :: Proprietary
    Operating System :: GNU/Linux
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.entry_points]
console_scripts =
    check-static-path = pre_commit_hooks.check_static_path:main
